# coyote_miner

./: CMakeLists.txt  README.txt  hashtable.hpp  pool_miner.cpp  stcp_socket.cpp
